--- a/2Shakes.html
+++ b/2Shakes.html
@@ -35,20 +35,9 @@
         <nav class="shift">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#overview">Wireframes</a></li>
-                <li><a href="#overview">2</a></li>
-                <li><a href="#overview">3</a></li>
-                <!-- <li><a href="#overview">4</a></li>
-                <li><a href="#overview">5</a></li>
-                <li><a href="#overview">6</a></li>
-                <li><a href="#overview">7</a></li>
-                <li><a href="#overview">8</a></li>
-                <li><a href="#overview">9</a></li>
-                <li><a href="#overview">11</a></li>
-                <li><a href="#overview">12</a></li> -->
-                <!-- <li><a href="#planning">Planning</a></li>
-                <li><a href="#dev">Development</a></li>
-                <li><a href="#">Reflection</a></li> -->
+                <li><a href="#towire">Wireframes</a></li>
+                <li><a href="#toproto">Prototype</a></li>
+                <li><a href="#torefection">REFLECTION</a></li>
             </ul>
         </nav>
         <div class="progress-container">
@@ -110,6 +99,7 @@
                 frameborder="0" width="1123" height="822" allowfullscreen="true" mozallowfullscreen="true"
                 webkitallowfullscreen="true"></iframe>
         </div>
+        <div id="towire"></div>
         <br>
         <h2 class="w2">Initial Wireframes</h2>
         <p>As a group, we choose to design our own wireframes because this allowed us to represent more concept to
@@ -172,7 +162,7 @@
         <img src="2shakes/cleanui concept opened.png" alt="New concept" class="cenimg" style="max-width: 1000px"><br>
         <p>Design 3 above is inspired from Google Drive's side navigation that has minimalistic drop-down navigation
             with icons that globally recognised for better recognition and recall. </p>
-        <h3 class="w2">Mid-break team meeting </h3>
+        <h3>Mid-break team meeting </h3>
         <p>After I had finished designing the quick concept, we as a team met up, to discuss the design and decided to
             create another concept based on the side chevron design Ata the project sponsor liked. </p>
         <img src="2shakes/team concept side tiles.jpg" alt="New concept" class="cenimg" style="max-width: 800px"><br>
@@ -189,7 +179,7 @@
         <img src="2shakes/on hover side navgation.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
         <p>The design above shows that when the user hovers over the tiles, the menu expands and also on the right-hand
             side the tools and tips can be minimised. </p>
-        <h3 class="w2">Meeting With Mike (Sponsor) </h3>
+        <h3>Meeting With Mike (Sponsor) </h3>
         <p>During the university break, we emailed Mike the project sponsor to have look at our concepts and he
             collated all the design and presented his own version of the UI parttens or wireframes. </p>
         <div class="video-container1" style="text-align: center;">
@@ -205,17 +195,72 @@
         <img src="2shakes/2shakesredign1.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
         <p>The second design was inspired based on the Jetstar web flight booking system. </p>
         <p>Mike, the project sponsor, preferred the second option but said he would like to have a footer as well as a
-            visual cue which allows the user to know which form is currently active because the user has the option to
+            visual cue which allows the user to know <span id="toproto"></span>which form is currently active because
+            the user has the option to
             go back and revisit forms. </p>
-            <h3 class="w">Final Prototype</h3>
-            <img src="2shakes/loginpage.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
-            <p>The Login page has been redesigned with rounded corners and with a more contemporary look. </p>
-            <img src="2shakes/reviewsignup.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
-            <img src="2shakes/the chosen traning colour.PNG" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+
+        <h3 class="w">Final Prototype</h3>
+        <img src="2shakes/loginpage.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+        <p>The Login page has been redesigned with rounded corners and with a more contemporary look. </p>
+        <img src="2shakes/reviewsignup.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+        <p>We developed various UI concepts for the profile sign-up form. The review phases allow the user to verify
+            the information which has inputted and allows the user to edit their details if necessary. </p>
+        <p>When meeting 2Shakes they were accepting and happy with the layout and styling changes. We incorpated into
+            our design so that when Skip was pressed, a pop-up notification would appear on the page giving users an
+            option to skip the other stages of the profile set up and get straight to signing up clients or they could
+            resume filling in their profile information. This is the final update. </p>
+        <img src="2shakes/the chosen traning colour.PNG" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+        <p>Original training environment included a salmon coloured background, instead we went with a teal colour as
+            it is different enough from the blue but does not take away from the 2Shakes orange. This colour was
+            recommended by Mike and it worked out reasonably well.</p>
         <video width="400" controls autoplay loop>
             <source src="2shakes/Prototype_RecordingV1.mov" type="video/mp4">
         </video>
+        <p id="torefection"> Demo Video of the 2Shakes Profile set up prototype for the CX redesign.</p>
         <h3 class="w">Reflection</h3>
+        <h4>Success Of The Project</h4>
+        <P>The success of our project was dependant on being able to meet requirements from the project brief. This
+            included the fact that the new UI had to allow stakeholders an easy and efficient transition through the
+            sign-up process. Following from this the UI that we produced needed to be different from their original
+            design, in terms of being refreshing and engaging to 2shakes clients. Ultimately the success of our overall
+            project was determined by our sponsors who would thus be the ones determining the final approval of our
+            project.</P>
+        <p>We were able to measure our project in terms of being an “easy and efficient” process through usability
+            testing we conducted after completion of our UI design. We sent the usability test to a variety of people
+            in terms of age, profession, gender etc. It was important that we got feedback from a mix of people as it
+            meant our design could be critiqued from different perspectives. The feedback we got was remarkably
+            positive in the sense that our project was able to be perceived as quite easy to use, visually appealing
+            and overall an effective sign-up process. This was supported by facts such as users were able to locate the
+            information we asked for, they found the colours complemented the 2shakes brand and worked well and lastly
+            there were many aspects in the design that supported the user throughout the process (e.g. Tools & Tips,
+            Sub and Main Navigation bar etc). </p>
+        <p>Moreover, we needed to take into account that the 2shakes clients we interviewed and received feedback from,
+            didn’t actually locate any significant faults with the current process. Thus this meant that our
+            deliverables were more so structured towards satisfying our sponsors. Each week we were able to take into
+            account sponsor feedback, develop it and then get it critiqued. This is where the agile methodology came
+            into play and meant that we had to act in accordance with their changing needs and requirements. Hence
+            getting rapid feedback was crucial in order to build our design. Our sponsors were impressed at our ability
+            as a team to progress our design in terms of what they wanted continuously. Towards the later weeks we were
+            getting closer and closer to what our sponsors had in mind, regarding the project outcome and evidently, we
+            were able to deliver and satisfy our sponsors.</p>
+        <h4>Team Success</h4>
+        <p>The team being in sync was an essential factor that we tried to sustain during the duration of the project.
+            Being successful was an important agenda we made clear in the beginning, so thankfully that was a good
+            starting point for our team to connect. We were successful in many aspects working together as we all
+            valued what one another had to offer and although there were problems concerning scheduling or coming to a
+            decision, we were able to persevere and overcome this through mutual consensus.</p>
+        <p>Our sponsors were happy with the way we worked together and stated that they were both able to spot
+            something each of us contributed or offered to the final project. As a team, this was important to hear,
+            and we were pleased with how our customers responded, as sponsor approval was a critical factor that aided
+            us, in determining then, if our project was a success.</p>
+        <p>Overall our team is satisfied with the way things turned out within the limited time we had, and we are
+            pleased to have met client satisfaction as this was an enabling factor in acknowledging the status of our
+            project to be regarded as successful.</p>
+        <div class="video-container1" style="text-align: center;">
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSQfxQOwWQMsnTD6qBo203KKfaeeltzTEt3Y0JS8nhUtOiKIe7h64Qo_uxZBZBdjhy2FRbhjgsoOy-h/embed?start=true&amp;loop=true&amp;delayms=2000"
+                width="1280" height="749" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+        </div>
+        <p>Final presentation</p>
     </div>
 
 
