--- a/myblog.html
+++ b/myblog.html
@@ -191,6 +191,39 @@
         </p>
         <img src="blog/Udaipurtajhotel.jpeg" alt="Udaipur" class="cenimg" style="max-width: 800px"><br>
     </div>
+    <!-- Dunedin blog -->
+    <div class="centerWrap" id="dunBlog" style="display: none;">
+        <h1 class="w">Dunedin, New Zealand</h1>
+        <p>The ‘Edinburgh of the South’ or more commonly known as Dunedin due to the name being derived from the
+            Scottish Gaelic name for Edinburgh - Dùn Èideann is known for being the student capital of New Zealand
+            (thank you University of Otago), its Scottish Architecture and the Otago Peninsula which is rich in
+            wildlife. It may not be as large as the other towns of New Zealand but adds another dimension to your New
+            Zealand – which makes it a must visit.
+        </p>
+        <img src="blog/dun1.jpg" alt="University of Otago clocktower" class="cenimg" style="max-width: 800px"><br>
+        <p>Along with our South Island road trip, the end of the Southern Scenic Route brought us to Dunedin. Being a
+            coastal town, the local favorite of Tunnel Beach takes you through a tunnel onto a sandy little cove, while
+            the guarded secret of Mt. Cargill provides views of the city and its nature that only the overhyped
+            reputation of Signal Hill Lookout could provide. Personally, the highlight of visiting Dunedin had to be
+            Otago Peninsula which gives you an uninhibited wildlife experience of seals, albatross and penguins.
+            Driving around the peninsula gives you a unique exposure to nature ranging from the chasms, lovers leap,
+            Taiaora Head Lighthouse and Sand-fly Bay.
+        </p>
+        <p>With the reputation of Dunedin being a university town there is more to be offered by the town for locals
+            and visitors alike. With the convenience of Dunedin being at one end of the Southern Scenic Route it makes
+            it easier to visit The Edinburgh of the South – one of the most underrated regions of New Zealand.
+        </p>
+        <img src="blog/dun2.jpeg" alt="Dunedin" class="cenimg" style="max-width: 800px"><br>
+        <p><b>Food and drink specialities: </b> Alcohol beverages (likes of Speights and Emersons)</p>
+        <p><b>Attractions: </b>Otago Peninsula (its wildlife), Mt Cargill, Signal Hill Lookout, surfing along St.
+            Clairs, Tunnel Beach, The Octogon, Lanarch Castle, Dunedin Botanical Gardens, Architecture around the town,
+            University of Otago clocktower
+        </p>
+        <p><b>Tips: </b>Try to go during the Summer (late December-early January) when the town is empty from students
+            – it is cleaner but also accommodation is cheaper - while, ensuring all the attractions are not hammered by
+            the harsh winter conditions.
+        </p>
+    </div>
     <br>
     <!-- footer ------------------------------>
     <footer class="footer">
