--- a/myblog.html
+++ b/myblog.html
@@ -73,7 +73,7 @@
             Bali. It allows for you to get away from the touristy vibe and experience Bali for what it traditionally
             represents.
         </p>
-        <img src="blog/p35.jpg" alt="rice feilds" class="cenimg" style="max-width: 800px"><br>
+        <img src="blog/ubud1.jpeg" alt="rice feilds" class="cenimg" style="max-width: 800px"><br>
         <p><b>Food specialities: </b> Vegan delicacies, detox drinks, cheap cocktails</p>
         <p><b>Attractions: </b> Monkey Forest Sanctuary, Tegallalang rice fields, Yoga centers, massage spas, art
             markets, cultural shows
