--- a/Vkfansite.html
+++ b/Vkfansite.html
@@ -33,8 +33,8 @@
         <nav class="shift">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#wire">Challenges</a></li>
-                <li><a href="#feed">Solution</a></li>
+                <li><a href="#wire">Challenges & Solution</a></li>
+                <li><a href="#feed">End Product</a></li>
             </ul>
         </nav>
         <div class="progress-container">
@@ -45,92 +45,69 @@
         <!-- project link button -->
         <a id="butproto" href="https://smeet-patel.github.io/Fan-Site-VK/" target="_blank">View
             Virat Kolhi's Fansite 2015</a>
-        <p>CENTRAL POLICE is a metropolitan police dispatch system under development, which is responsible for sending
-            mobile units to incidents like traffic accidents, domestic incidents, robberies, etc. </p>
-        <p>CENTRAL POLICE runs 24/7 in a call centre located in downtown Wellington. The call centre operators are
-            trained in police communications. Whenever someone calls the police, the call lands at the call centre and
-            is handled by an operator in combination with CENTRAL POLICE to coordinate the activities. </p>
-        <p>The objective is to create personas primary and secondary for the Central police application prototype when
-            designing several wireframes (concepts) to fulfil the requirements of the user personas. Then create the
-            initial wireframes to get people (users) to give feedback. Based on the feedback, develop and improve the
-            final high-fidelity prototype ensuring all aspects have been cover in user-friendly manner.</p>
+        <p>The purpose of this project was to create a user-friendly and professional looking fan site for Virat
+            Kolhi. </p>
+        <p>For my <u>previous project</u>, I learnt to use the proper HTML structure with the DOCTYPE, HEAD, body tag
+            and nesting tags. For my Cyber CV, I was also required to use external CSS page, use of lists, a navigation
+            bar which redirects to other HTML pages, embed a video and display images. </p>
+        <p><b>For this project, I learnt how to </b>:</p>
+        <li>Embed social media post, basic Google Map</li>
+        <li>Use class and ID </li>
+        <li>Use span and divs</li>
+        <li>Creating a drop-down navigation bar with link formatting (pseudo code)</li>
+        <li>Using different position property </li>
+        <li>Creating and styling Table with colspan and rowspan</li>
+        <li>Using email and phone external links</li>
         <div id="overview"></div><br>
 
     </div>
     <!-- personas ------------------------------>
     <div class="centerWrap">
-        <h1 class="w">Personas </h1>
-        <h2>Primary Personas</h2>
-        <p><b>Primary personas</b> were created to represent various user demographics such as their background, age,
-            gender,
-            the role of the primary user who will be using this police dispatch system. The personas also specify the
-            user key behavioural traits, goals and the must and must not have features specific to the user and this
-            enables to design the user experience to best accommodate these features. </p>
-        <div class="video-container" style="text-align: center;">
-            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRU7afYlRXRzzSdGbzcfwHW6OmM3HhjLSmmo-d4QZjIm2bqMZMhm6FI0SBdcBRMlSx1H-8mUadMgzSc/embed?start=true&loop=true&delayms=3000"
-                frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-        </div>
-        <h2>secondary Personas</h2>
-        <p>The <b>secondary personas</b> are the user that are secondary of nature such as part-time, trainee and
-            technical support. They do not primarily use the central police dispatch system as someone who holds a
-            managerial position and works full time. Secondary personas enable to enhance the usability for even for
-            the user who has less exposure and experience with the system by catering for them with nice to have
-            features. </p>
-            <div class="video-container" style="text-align: center;">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSoW8dyUQ7XIjdnlAH5GOdE2HPI2frf01okqvmqbIgjgaGWz9GeiAVJIDdzcsAqFQDuy0cPEsVj7_LK/embed?start=true&loop=true&delayms=3000"
-                    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            </div>
-        <div id="wire"></div><br>
-        <h1 class="w">Wireframes </h1>
-        <p><b>Wireframe</b> were used a visual schematic or template of the screen to communicate interface and
-            interaction design. I used a sketchy GUI window style using an application called Pencil. Menus, buttons
-            text fields and other elements are displayed which it made better easier to follow while developing the
-            prototype. This was a great way to ensure everything had been captured or to identify any gaps that needed
-            to be addressed were satisfied.</p>
-        <img src="centralpolice/wireframeCP.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
-        <p>The wireframe above is the dashboard form with the report's details on the top left, followed by the status
-            and level of risk. It also nice to have the officer narrations for those secondary personas. On the right
-            side, the user can log the incident, enter the offender details, view map and dispatch units. </p>
-        <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px">
-        <div id="feed"></div><br>
-        <h1 class="w">User Feedback </h1>
-        <p>To get feedback from other people for my initial prototype, used Google forms for the user to give valuable
-            feedback based on the USE questionnaire questions. The main category of questions I asked was usefulness,
-            ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
-            experience and interaction for the prototype.</p>
-            <div class="video-container1" style="text-align: center;">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRKb75Ro6Dl8gpPhkhzf1FkkJZHmIUnG086UuVQhAPmr7djTMzRv9ixjb5s866QTX-INVPIM64n3dSK/embed?start=true&loop=true&delayms=2000"
-                    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            </div>
-        <!-- <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px"> -->
-        <div id="proto"></div><br>
-        <h1 class="w">Prototype </h1>
-        <img src="centralpolice/cplogin.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>Login for with 'tab' functionality (accelerator feature).</p>
-        <img src="centralpolice/newjobcp.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>A landing page for Central Police which the user can answer calls or remove an entry from their incoming
-            list. </p>
-        <img src="centralpolice/filledformcp.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>Answering the first call and the officer fills out the details and incident desperation as they ask the
-            questions. </p>
-        <img src="centralpolice/linkedcall.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>The details of the incident appear to be familiar to the user. This call will be marked as repeat calls as
-            can be linked and filtered suburb. </p>
-        <img src="centralpolice/linkformaction.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <img src="centralpolice/mappagestart.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>After the form has been filled out the user can 'go to dispatch.' The user can view the location of the
-            incident to dispatch units. </p>
-        <img src="centralpolice/dispatch.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>The officer dispatches the closest unit available. The displays the real-time tracking of the unit
-            dispatched and where they are to guide them if necessary.</p>
-        <img src="centralpolice/findrecord.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>Filtering records by typing into the search bar to match any detail displayed in the row. From this screen
-            the user able to select the row and change the status of the incident. </p>
-        <img src="centralpolice/otherrecords.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>The current screen displays the details of all the unit and incidents. </p>
-
-        <a id="butproto" href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View
-            Central Police Prototype</a>
+        <h1 class="w">Challenges & Solution</h1>
+        <h2>1. Drop-Down Navigation Bar </h2>
+        <p>For this Project, my biggest challenge has to be a navigation bar because of its functionality and therefore
+            its complexity of the code. For my Cyber CV, the navigation bar was simple and therefore easy to use. </p>
+        <p>To improve navigation and flow for this website, I choose to implement a standard navigation bar with
+            dropdown options that scroll directly to the section on the webpage. The navigation bar was challenging
+            because I did not have enough experience with web development. </p>
+        <h3 style="color: orange">Solution: </h3>
+        <p>For the Navigation bar to work, I had to use a nested unordered list (2 levels deep) and used CSS to hide
+            or on hover show the options. Using the 'ID' element, I was able to redirect the webpage to the specific
+            section. </p>
+        <h3 style="color: orange">Issues while creating the solution: </h3>
+        <p>I have never used the 'display' attribute in CSS, as a result, all the options display along aside
+            each other and navigation bar was overflowing to the next line. After hours of experimenting and then
+            researching I was able to achieve what I wanted.</p>
+        <p>While redirecting the webpage, I was trying to link to section without an id reference, and once that was
+            sorted, I also made the mistake of directly linking with code using '/' instead of '#' (e.g.
+            page2.html/stats instead of page2.html#stats ).
+        </p>
+        <h2>2. Design and Position Property </h2>
+        <p>Using w3School, University Workshop guides which I used for my Cyber CV and the internet, I explored using
+            different position properties, using images as background and using opacity. </p>
+        <p>Unlike my Cyber CV, I wanted to create an artistic eye-popping user interface. </p>
+        <h3 style="color: orange">Solution: </h3>
+        <p>Using photoshop and editing photo editing skills, I was able to create a customised background for the
+            fansite.
+            Like Wikipedia, I also wanted to implement a side column and a larger main content column. </p>
+        <p>I created a wrapper to centre the content. Inside the wrapper, I created two columns which the left was
+            360px wide and floated to the left and the second column was 700px wide which floated to the right side. As
+            a result, this created a centre margin depending on the user screen size because the position property was
+            set to the relative.
+        </p>
+        <p>The content within the wrapper div had an opacity of 80% to show the background image which I had created.
+        </p>
+        <h2>3. Embedding Social Media Post </h2>
+        <p>Virat Kolhi and his exploits have resulted in him becoming one of the most followed Indian and sports
+            player, hence embedding his social media post onto this fan page was important to ensure his fans can keep
+            up to date with his achievements and messages.</p>
+        <h3 style="color: orange">Issues: </h3>
+        <p>Due to a bug in the Facebook embed link during this project, I was unable to embed the post successfully.
+            With Instagram, the image would not display. </p>
+        <h3 style="color: orange">Solution: </h3>
+        <p>Most Social Media platforms are streamlined so I was able to create a twitter account and embed twitter
+            feeds to my fan site. </p>
+        <h1 class="w">End Product</h1>
     </div>
 
     <br>
