Cyber CV completed and restyled

--- a/Vkfansite.html
+++ b/Vkfansite.html
@@ -108,6 +108,8 @@
         <p>Most Social Media platforms are streamlined so I was able to create a twitter account and embed twitter
             feeds to my fan site. </p>
         <h1 class="w">End Product</h1>
+        <a id="butproto" href="https://smeet-patel.github.io/Fan-Site-VK/" target="_blank">View
+            Virat Kolhi's Fansite 2015</a>
     </div>
 
     <br>
