Sports World Redesigned

--- a/Vkfansite.html
+++ b/Vkfansite.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Virat Kohli Fan Site</title>
+    <title>Virat Kohli Fan Site | Project</title>
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <!-- My my mini icon ------------------------------>
