--- a/mywork.html
+++ b/mywork.html
@@ -135,7 +135,7 @@
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
                         <!-- Cyber CV 2015 ------------------------------>
-                        <img src="cyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
+                        <img src="projects/CyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
                         <a href="#">Web Development</a>
@@ -143,10 +143,10 @@
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="CyberCV2015.html"></a>
+                           <a id="share" class="share-toggle share-icon" href="CyberCV.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="CyberCV2015.html">Cyber CV 2015 </a></h3>
+                           <h3><a href="CyberCV.html">Cyber CV 2015 </a></h3>
                            <p>In 2015, I was tasked to develop a Cyber CV about where I see myself in 3 years time.  AND what a journey it has been! Find out more about me. </p>
                            <br>
                         </article>
@@ -184,15 +184,15 @@
                         <img src="projects/fansite/fansitenav.png" alt="Pair programming and leading" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="#">Web Development</a>
+                        <a href="Vkfansite.html">Web Development</a>
                         <time>Late 2015</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="#"></a>
+                           <a id="share" class="share-toggle share-icon" href="Vkfansite.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="#">Virat Kohli Fan Site</a></h3>
+                           <h3><a href="Vkfansite.html">Virat Kohli Fan Site</a></h3>
                            <p>In 2014, the Indian cricket team toured New Zealand which Virat Kohli played exceptionally during the tour. To improving my web development skills, I decided to create a fan site for Virat Kohli.</p>
                         </article>
                      </div>
