Fan site project completed

--- a/Vkfansite.html
+++ b/Vkfansite.html
@@ -33,10 +33,11 @@
         <nav class="shift">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#wire">Challenges & Solution</a></li>
-                <li><a href="#feed">End Product</a></li>
+                <li><a href="#challenges">Challenges & Solution</a></li>
+                <li><a href="#end">End Product</a></li>
             </ul>
         </nav>
+        <span id="overview"></span><br>
         <div class="progress-container">
             <div class="progress-bar" id="myBar"></div>
         </div>
@@ -55,10 +56,10 @@
         <li>Use class and ID </li>
         <li>Use span and divs</li>
         <li>Creating a drop-down navigation bar with link formatting (pseudo code)</li>
+        <span id="challenges"></span>
         <li>Using different position property </li>
         <li>Creating and styling Table with colspan and rowspan</li>
         <li>Using email and phone external links</li>
-        <div id="overview"></div><br>
 
     </div>
     <!-- personas ------------------------------>
@@ -74,6 +75,15 @@
         <p>For the Navigation bar to work, I had to use a nested unordered list (2 levels deep) and used CSS to hide
             or on hover show the options. Using the 'ID' element, I was able to redirect the webpage to the specific
             section. </p>
+        <div style="margin: 0 auto;max-width: 800px; width: 100%;">
+            <div class="hoverOverImage">
+                <img src="projects/fansite/vknavbar.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">The Nav bar aligned with the picture columns.</div>
+                </div>
+            </div>
+        </div>
         <h3 style="color: orange">Issues while creating the solution: </h3>
         <p>I have never used the 'display' attribute in CSS, as a result, all the options display along aside
             each other and navigation bar was overflowing to the next line. After hours of experimenting and then
@@ -90,6 +100,15 @@
         <p>Using photoshop and editing photo editing skills, I was able to create a customised background for the
             fansite.
             Like Wikipedia, I also wanted to implement a side column and a larger main content column. </p>
+        <div style="margin: 0 auto;max-width: 800px; width: 100%;">
+            <div class="hoverOverImage">
+                <img src="projects/fansite/VKcol.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Two columns like Wikipedia.</div>
+                </div>
+            </div>
+        </div>
         <p>I created a wrapper to centre the content. Inside the wrapper, I created two columns which the left was
             360px wide and floated to the left and the second column was 700px wide which floated to the right side. As
             a result, this created a centre margin depending on the user screen size because the position property was
@@ -104,12 +123,55 @@
         <h3 style="color: orange">Issues: </h3>
         <p>Due to a bug in the Facebook embed link during this project, I was unable to embed the post successfully.
             With Instagram, the image would not display. </p>
+        <span id="end"></span>
         <h3 style="color: orange">Solution: </h3>
         <p>Most Social Media platforms are streamlined so I was able to create a twitter account and embed twitter
             feeds to my fan site. </p>
         <h1 class="w">End Product</h1>
+        <div style="margin: 0 auto;max-width: 800px; width: 100%;">
+            <div class="hoverOverImage">
+                <img src="projects/fansite/VKfansiteIndexpage.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Index page of Virat Kolhi fan site.</div>
+                </div>
+            </div>
+            <li id="pb">Index page for Virat Kolhi fan site.</li>
+            <br>
+            <div class="hoverOverImage">
+                <img src="projects/fansite/VKrecordspage.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Records page for Virat Kolhi fan site.</div>
+                </div>
+            </div>
+            <br>
+            <li id="pb">Records page for Virat Kolhi fan site.</li>
+            <br>
+            <div class="hoverOverImage">
+                <img src="projects/fansite/Vkgallery.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text"> Virat Kolhi fan site gallery</div>
+                </div>
+            </div>
+            <br>
+            <li id="pb">Virat Kolhi fan site gallery.</li>
+            <br>
+            <div class="hoverOverImage">
+                <img src="projects/fansite/VKsocialmediapage.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%;">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text"> Virat Kolhi fan site social media feed</div>
+                </div>
+            </div>
+            <br>
+            <li id="pb">Virat Kolhi fan site social media feed.</li>
+        </div>
+        <hr>
         <a id="butproto" href="https://smeet-patel.github.io/Fan-Site-VK/" target="_blank">View
             Virat Kolhi's Fansite 2015</a>
+
     </div>
 
     <br>
